--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,16 +9,16 @@
         android:name="com.soyaaroncervantes.proyectofinalbasico.view.ui.fragments.HomeFragment"
         android:label="HomeFragment" >
         <action
-            android:id="@+id/action_homeFragment_to_bookFragment"
-            app:destination="@id/navBookFragment" />
+            android:id="@+id/action_navHomeFragment_to_addBookFragment"
+            app:destination="@id/navAddBookFragment" />
     </fragment>
     <fragment
-        android:id="@+id/navBookFragment"
-        android:name="com.soyaaroncervantes.proyectofinalbasico.view.ui.fragments.BookFragment"
-        android:label="fragment_book"
-        tools:layout="@layout/fragment_book" >
+        android:id="@+id/navAddBookFragment"
+        android:name="com.soyaaroncervantes.proyectofinalbasico.view.ui.fragments.AddBookFragment"
+        android:label="fragment_add_book"
+        tools:layout="@layout/fragment_add_book" >
         <action
-            android:id="@+id/action_bookFragment_to_booksFragment"
+            android:id="@+id/action_addBookFragment_to_navBooksFragment"
             app:destination="@id/navBooksFragment" />
     </fragment>
     <fragment
@@ -35,4 +35,5 @@
         android:name="com.soyaaroncervantes.proyectofinalbasico.view.ui.fragments.BookDetailFragment"
         android:label="fragment_book_detail"
         tools:layout="@layout/fragment_book_detail" />
+
 </navigation>
