--- a/app/src/main/res/layout/fragment_book_detail.xml
+++ b/app/src/main/res/layout/fragment_book_detail.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -12,7 +13,7 @@
             android:layout_height="wrap_content">
 
             <Toolbar
-                android:id="@+id/toolbarConference"
+                android:id="@+id/toolbarBookDetail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
@@ -29,92 +30,109 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <LinearLayout
+                <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    app:cardCornerRadius="@dimen/cardCornerRadius"
+                    app:cardElevation="5dp">
 
-                    <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/imageViewBook"
-                        android:layout_width="@dimen/bookImageDetail"
-                        android:layout_height="@dimen/bookImageDetail"
-                        android:src="@drawable/ic_book" />
-
-                    <!--  Author, name and pages  -->
                     <androidx.appcompat.widget.LinearLayoutCompat
-                        android:layout_width="wrap_content"
+
+                        android:padding="@dimen/spaceForBookDetail"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/spaceForBookDetail"
                         android:orientation="vertical">
 
-                        <TextView
-                            android:id="@+id/textViewBookDetailName"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Nombre del libro"
-                            android:textSize="@dimen/bookTitle1" />
-
-                        <!--  Author & Pages  -->
-                        <androidx.appcompat.widget.LinearLayoutCompat
+                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginVertical="@dimen/smallSpaceForBookDetail"
-                            android:gravity="center_vertical"
                             android:orientation="horizontal">
 
-                            <TextView
-                                android:id="@+id/textViewBookDetailAuthor"
+                            <androidx.appcompat.widget.AppCompatImageView
+                                android:id="@+id/imageViewBook"
+                                android:layout_width="@dimen/bookImageDetail"
+                                android:layout_height="@dimen/bookImageDetail"
+                                android:src="@drawable/ic_book" />
+
+                            <!--  Author, name and pages  -->
+                            <androidx.appcompat.widget.LinearLayoutCompat
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Autor del libro"
-                                android:textSize="@dimen/bookSubtitle1"
-                                android:textStyle="bold" />
+                                android:layout_margin="@dimen/spaceForBookDetail"
+                                android:orientation="vertical">
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginHorizontal="@dimen/smallSpaceForBookDetail"
-                                android:text="-" />
+                                <TextView
+                                    android:id="@+id/textViewBookDetailName"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Nombre del libro"
+                                    android:textSize="@dimen/bookTitle1" />
 
-                            <TextView
-                                android:id="@+id/textViewBookDetailPages"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Páginas"
-                                android:textSize="@dimen/bookSubtitle2" />
+                                <!--  Author & Pages  -->
+                                <androidx.appcompat.widget.LinearLayoutCompat
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginVertical="@dimen/smallSpaceForBookDetail"
+                                    android:gravity="center_vertical"
+                                    android:orientation="horizontal">
 
-                        </androidx.appcompat.widget.LinearLayoutCompat>
+                                    <TextView
+                                        android:id="@+id/textViewBookDetailAuthor"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="Autor del libro"
+                                        android:textSize="@dimen/bookSubtitle1"
+                                        android:textStyle="bold" />
 
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginHorizontal="@dimen/smallSpaceForBookDetail"
+                                        android:text="-" />
+
+                                    <TextView
+                                        android:id="@+id/textViewBookDetailPages"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="Páginas"
+                                        android:textSize="@dimen/bookSubtitle2" />
+
+                                </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+                            </androidx.appcompat.widget.LinearLayoutCompat>
+
+                        </LinearLayout>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/smallSpaceForBookDetail"
+                            android:text="Resume:"
+                            android:textSize="@dimen/bookTitle1" />
+
+                        <TextView
+                            android:id="@+id/textViewBookDetailResume"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginVertical="@dimen/spaceForBookDetail"
+                            android:text="Book Resume" />
+
+                        <androidx.appcompat.widget.AppCompatButton
+                            android:id="@+id/compatButtonBookDetailButton"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:background="@color/teal_700"
+                            android:paddingHorizontal="15dp"
+                            android:paddingVertical="5dp"
+                            android:text="Go to Website"
+                            android:textColor="@color/white" />
 
                     </androidx.appcompat.widget.LinearLayoutCompat>
 
-                </LinearLayout>
+                </androidx.cardview.widget.CardView>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/bookTitle1"
-                    android:layout_marginTop="@dimen/smallSpaceForBookDetail"
-                    android:text="Resume:"/>
-
-
-                <TextView
-                    android:id="@+id/textViewBookDetailResume"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginVertical="@dimen/spaceForBookDetail"
-                    android:text="Book Resume"/>
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/compatButtonBookDetailButton"
-                    android:background="@color/teal_700"
-                    android:layout_gravity="center"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingVertical="5dp"
-                    android:paddingHorizontal="15dp"
-                    android:text="Go to Website"
-                    android:textColor="@color/white"/>
             </androidx.appcompat.widget.LinearLayoutCompat>
 
         </ScrollView>
